# opd_panel

./: .env.example  .gitignore  Makefile  README.md
agent/: Cargo.toml  README.md
agent/example-server-config/: opd.json
agent/src/: auth.rs  cgroup.rs  config.rs  logs.rs  main.rs  metrics.rs  registry.rs
agent/src/api/: backup.rs  disks.rs  files.rs  mod.rs  server.rs
agent/src/supervisor/: mod.rs  process.rs  watchdog.rs
cli/: README.md  go.mod  main.go
cli/cmd/: add.go  console.go  daemon.go  exec_helper.go  list.go  logs.go  metrics.go  remove.go  restart.go  root.go  start.go  status.go  stop.go  tui.go
cli/internal/client/: client.go
cli/internal/daemon/: daemon.go
cli/internal/httpapi/: disk_unix.go  disk_windows.go  server.go
cli/internal/ipc/: protocol.go
cli/internal/supervisor/: supervisor.go
cli/internal/tui/: model.go
cli/systemd/: install.sh  opd.service  uninstall.sh
docs/: architecture.md  cli-reference.md  security.md
panel/: go.mod
panel/cmd/opd/: main.go
panel/cmd/opdd/: main.go
panel/internal/agent/: client.go
panel/internal/config/: config.go
panel/internal/domain/: allocation.go  backup.go  database.go  event.go  plugin.go  schedule.go  server.go  subuser.go  tunnel.go
panel/internal/repository/: interfaces.go
panel/internal/usecase/: database.go  network.go  schedule.go  server.go  (+1 more)
panel/migrations/: 001_init.sql  002_features.sql
scripts/: dev.sh  install.sh
scripts/systemd/: opd-agent.service  opdd.service
shared/: openapi.yaml
web/: README.md  next.config.js  package.json  tailwind.config.ts
(+32 files in other folders)
