[package]
name = "opd-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opd-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["trace"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
